fixed alignment

--- a/src/components/PageInventory/index.scss
+++ b/src/components/PageInventory/index.scss
@@ -5,8 +5,8 @@ table.page-inventory {
 
     tr td {
         padding: .25rem;
-        width: 5.5rem;
-        min-width: 5.5rem;
+        width: 6.5rem;
+        min-width: 6.5rem;
         padding-right: 16px;
         
         &:last-child {
